fetch plane path on click, update that path on plane data update, show plane info in slide panel

--- a/app/android/WhatPlaneIsThat/app/src/main/res/values/strings.xml
+++ b/app/android/WhatPlaneIsThat/app/src/main/res/values/strings.xml
@@ -2,5 +2,8 @@
     <string name="app_name">WhatPlaneIsThat</string>
     <string name="title_activity_main">Finder</string>
 
+    <string name="no_plane_marker_selected">Tap a plane to get it\'s info.</string>
+
     <color name="visibility_circle_color">#5199dc</color>
+
 </resources>
